--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class="card">
 			<img class="avatar" src="images/0.png" />
-			<b class="user">Clyde</b>
+			<p class="user">Clyde</p>
 			<p class="message">Hello world!</p>
 		</div>
 	</body>
