--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,9 +7,11 @@
 
 	<body>
 		<div class="card">
-			<img class="avatar" src="images/0.png" />
-			<p class="user">Clyde</p>
-			<p class="message">Hello world!</p>
+			<img class="avatar" alt=" " src="images/0.png" />
+			<div>
+				<p class="user">Clyde</p>
+				<p class="message">Hello world!</p>
+			</div>
 		</div>
 	</body>
 </html>
