--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,7 +7,7 @@
 
 	<body>
 		<div class="card">
-			<img class="avatar" alt=" " src="images/0.png" />
+			<img class="avatar" alt="User avatar" src="images/0.png" />
 			<div>
 				<p class="user">Clyde</p>
 				<p class="message">Hello world!</p>
