--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class="card">
 			<img class="avatar" alt="User avatar" src="images/0.png" />
-			<div>
+			<div class="content">
 				<p class="user">Clyde</p>
 				<p class="message">Hello world!</p>
 			</div>
