Add server tag and timestamp
Signed-off-by: GitHub <noreply@github.com>

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,9 +7,16 @@
 
 	<body>
 		<div class="card">
-			<img class="avatar" alt="User avatar" src="images/0.png" />
+			<img class="avatar" alt="User avatar" src="images/avatars/0.png" />
 			<div class="content">
-				<p class="user">Clyde</p>
+				<div class="user">
+					<p>Clyde</p>
+					<div class="tag">
+						<img src="" alt="User server tag" >
+						<p>TAG</p>
+					</div>
+					<p class="timestamp">00/00/0000 00:00 AM</p>
+				</div>
 				<p class="message">Hello world!</p>
 			</div>
 		</div>
