--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,7 +12,7 @@
 				<div class="user">
 					<p>Clyde</p>
 					<div class="tag">
-						<img src="" alt="User server tag" >
+						<img src="images/badges/0.svg" alt="User server tag" >
 						<p>TAG</p>
 					</div>
 					<p class="timestamp">00/00/0000 00:00 AM</p>
