Add timestamp colors
Signed-off-by: Ryan Luu <ryan.luu@ryanluu.dev>

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,7 +17,12 @@
 					</div>
 					<p class="timestamp">00/00/0000 00:00 AM</p>
 				</div>
-				<p class="message">Hello world!</p>
+				<p class="message">
+					According to all known laws of aviation, there is no way a bee should
+					be able to fly. Its wings are too small to get its fat little body off
+					the ground. The bee, of course, flies anyway because bees don't care
+					what humans think is impossible.
+				</p>
 			</div>
 		</div>
 	</body>
