Add attached images
Signed-off-by: Ryan Luu <ryan.luu@ryanluu.dev>

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,8 +8,8 @@
 	<body>
 		<div class="card">
 			<img class="avatar" alt="User avatar" src="images/avatars/0.png" />
-			<div class="content">
-				<div class="user">
+			<div>
+				<div class="username">
 					<p>Clyde</p>
 					<div class="tag">
 						<img src="images/badges/0.svg" alt="User server tag" >
@@ -22,6 +22,8 @@
 					be able to fly. Its wings are too small to get its fat little body off
 					the ground. The bee, of course, flies anyway because bees don't care
 					what humans think is impossible.
+					<br>
+					<img alt="Message image attachment" src="images/avatars/0.png" />
 				</p>
 			</div>
 		</div>
