Add attachment example
Signed-off-by: Ryan Luu <ryan.luu@ryanluu.dev>

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -23,7 +23,7 @@
 					the ground. The bee, of course, flies anyway because bees don't care
 					what humans think is impossible.
 					<br>
-					<img alt="Message image attachment" src="images/avatars/0.png" />
+					<img alt="Message image attachment" src="images/attachment.png" />
 				</p>
 			</div>
 		</div>
