--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,6 +15,10 @@
 						<img src="images/badges/0.svg" alt="User server tag" >
 						<p>TAG</p>
 					</div>
+					<div class="tag bot">
+						<img src="images/badges/verified.svg" alt="Verified app" >
+						<p>APP</p>
+					</div>
 					<p class="timestamp">00/00/0000 00:00 AM</p>
 				</div>
 				<p class="message">
