--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,25 +10,25 @@
 			<img class="avatar" alt="User avatar" src="images/avatars/0.png" />
 			<div>
 				<div class="username">
-					<p>Clyde</p>
-					<div class="tag">
+					<span>Clyde</span>
+					<span class="tag">
 						<img src="images/badges/0.svg" alt="User server tag" >
-						<p>TAG</p>
-					</div>
-					<div class="tag bot">
-						<img src="images/badges/verified.svg" alt="Verified app" >
-						<p>APP</p>
-					</div>
-					<p class="timestamp">00/00/0000 00:00 AM</p>
+						<span>TAG</span>
+					</span>
+					<span class="tag bot">
+						<img src="image	s/badges/verified.svg" alt="Verified app" >
+						<span>APP</span>
+					</span>
+					<span class="timestamp">00/00/0000 00:00 AM</span>
 				</div>
-				<p class="message">
+				<span class="message">
 					According to all known laws of aviation, there is no way a bee should
 					be able to fly. Its wings are too small to get its fat little body off
 					the ground. The bee, of course, flies anyway because bees don't care
 					what humans think is impossible.
 					<br>
 					<img alt="Message image attachment" src="images/attachment.png" />
-				</p>
+				</span>
 			</div>
 		</div>
 	</body>
