Improve username hierarchy
Signed-off-by: Ryan Luu <ryan.luu@ryanluu.dev>

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,7 +10,7 @@
 			<img class="avatar" alt="User avatar" src="images/avatars/0.png" />
 			<div>
 				<div class="username">
-					<span>Clyde</span>
+					Clyde
 					<span class="tag">
 						<img src="images/badges/0.svg" alt="User server tag" >
 						<span>TAG</span>
