--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,7 +19,7 @@
 						<img src="images/badges/verified.svg" alt="Verified app" >
 						<span>APP</span>
 					</span>
-					<span class="timestamp">00/00/0000 00:00 AM</span>
+					<!-- <span class="timestamp">00/00/0000 00:00 AM</span> -->
 				</div>
 				<span class="message">
 					According to all known laws of aviation, there is no way a bee should
