--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,10 +15,10 @@
 						<img src="images/badges/0.svg" alt="User server tag" >
 						<span>TAG</span>
 					</span>
-					<span class="tag bot">
+					<!-- <span class="tag bot">
 						<img src="images/badges/verified.svg" alt="Verified app" >
 						<span>APP</span>
-					</span>
+					</span> -->
 					<!-- <span class="timestamp">00/00/0000 00:00 AM</span> -->
 				</div>
 				<span class="message">
@@ -26,8 +26,8 @@
 					be able to fly. Its wings are too small to get its fat little body off
 					the ground. The bee, of course, flies anyway because bees don't care
 					what humans think is impossible.
-					<br>
-					<img alt="Message image attachment" src="images/attachment.png" >
+					<!-- <br>
+					<img alt="Message image attachment" src="images/attachment.png" > -->
 				</span>
 			</div>
 		</div>
