Add in formatting examples
Signed-off-by: Ryan Luu <ryan.luu@ryanluu.dev>

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,36 @@
 					be able to fly. Its wings are too small to get its fat little body off
 					the ground. The bee, of course, flies anyway because bees don't care
 					what humans think is impossible.
-					<!-- <br>
-					<img alt="Message image attachment" src="images/attachment.png"> -->
+
+					<h1>Header 1</h1>
+					<h2>Header 2</h2>
+					<h3>Header 3</h3>
+
+					<small>Subtext</small>
+					<br>
+					<b>Bold</b>
+					<br>
+					<i>Italic</i>
+					<br>
+					<u>Underline</u>
+					<br>
+					<del>Strikethrough</del>
+					<br>
+					<code>Inline code</code>
+
+					<ul>
+						<li>One</li>
+						<li>
+							Two
+							<ul>
+								<li>Three</li>
+								<li>Four</li>
+							</ul>
+						</li>
+					</ul>
+
+					<br>
+					<img alt="Message image attachment" src="images/attachment.png">
 				</span>
 			</div>
 		</div>
