Add block quote example
Signed-off-by: Ryan Luu <ryan.luu@ryanluu.dev>

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,10 @@
 					<br>
 					<code>Inline code</code>
 
+					<blockquote>
+						Block Quotes
+					</blockquote>
+
 					<ul>
 						<li>One</li>
 						<li>
