Add masked links
Signed-off-by: Ryan Luu <ryan.luu@ryanluu.dev>

--- a/public/index.html
+++ b/public/index.html
@@ -42,10 +42,10 @@
 					<del>Strikethrough</del>
 					<br>
 					<code>Inline code</code>
+					<br>
+					<a href="https://example.com">Masked link</a>
 
-					<blockquote>
-						Block Quotes
-					</blockquote>
+					<blockquote>Block quotes</blockquote>
 
 					<ul>
 						<li>One</li>
