--- a/public/index.html
+++ b/public/index.html
@@ -27,38 +27,40 @@
 					the ground. The bee, of course, flies anyway because bees don't care
 					what humans think is impossible.
 
-					<h1>Header 1</h1>
-					<h2>Header 2</h2>
-					<h3>Header 3</h3>
-
-					<small>Subtext</small>
 					<br>
-					<b>Bold</b>
 					<br>
 					<i>Italic</i>
+					<br>
+					<b>Bold</b>
 					<br>
 					<u>Underline</u>
 					<br>
 					<del>Strikethrough</del>
-					<br>
-					<code>Inline code</code>
+
+					<h1>Header 1</h1>
+					<h2>Header 2</h2>
+					<h3>Header 3</h3>
+					<small>Subtext</small>
+
 					<br>
 					<a href="https://example.com">Masked link</a>
 
-					<blockquote>Block quotes</blockquote>
-
 					<ul>
 						<li>One</li>
-						<li>
-							Two
+						<ul>
+							<li>Two</li>
 							<ul>
 								<li>Three</li>
-								<li>Four</li>
 							</ul>
-						</li>
+						</ul>
 					</ul>
 
-					<br>
+					<code>Inline code</code>
+
+					<pre>Code block</pre>
+
+					<blockquote>Block quotes</blockquote>
+
 					<img alt="Message image attachment" src="images/attachment.png">
 				</span>
 			</div>
