Add spoiler css
Signed-off-by: GitHub <noreply@github.com>

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,8 @@
 					<u>Underline</u>
 					<br>
 					<del>Strikethrough</del>
+					<br>
+					<span>Spoiler</span>
 
 					<h1>Header 1</h1>
 					<h2>Header 2</h2>
