Add mention CSS
Signed-off-by: GitHub <noreply@github.com>

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,9 @@
 					<br>
 					<del>Strikethrough</del>
 					<br>
-					<span>Spoiler</span>
+					<span class="spoiler">Spoiler</span>
+					<br>
+					<span class="mention">@Clyde</span>
 
 					<h1>Header 1</h1>
 					<h2>Header 2</h2>
