--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,15 @@
 					<!-- <span class="timestamp">00/00/0000 00:00 AM</span> -->
 				</div>
 				<span class="message">
-					According to all known laws of aviation, there is no way a bee should
-					be able to fly. Its wings are too small to get its fat little body off
-					the ground. The bee, of course, flies anyway because bees don't care
-					what humans think is impossible.
+					According to all known laws of aviation
+					<img
+						class="emoji"
+						src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@latest/assets/72x72/2764.png"
+						alt=""
+					>
+					, there is no way a bee should be able to fly. Its wings are too small
+					to get its fat little body off the ground. The bee, of course, flies
+					anyway because bees don't care what humans think is impossible.
 
 					<br>
 					<br>
@@ -66,7 +71,11 @@
 
 					<pre>Code block</pre>
 
-					<img alt="Message image attachment" src="images/attachment.png">
+					<img
+						class="attachment"
+						alt="Message image attachment"
+						src="images/attachment.png"
+					>
 				</span>
 			</div>
 		</div>
