--- a/public/index.html
+++ b/public/index.html
@@ -23,16 +23,10 @@
 					<!-- <span class="timestamp">00/00/0000 00:00 AM</span> -->
 				</div>
 				<span class="message">
-					According to all known laws
-					<img
-						class="emoji"
-						src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@latest/assets/72x72/2764.png"
-						alt=""
-					>
-					of aviation, there is no way a bee should be able to fly. Its wings
-					are too small to get its fat little body off the ground. The bee, of
-					course, flies anyway because bees don't care what humans think is
-					impossible.
+					According to all known laws ⚖️ of aviation ✈️, there is no way a bee 🐝
+					should be able to fly. Its wings 🦋 are too small to get its fat
+					little body off the ground 🌍. The bee, of course, flies anyway
+					because bees don't care what humans 🧑‍🤝‍🧑 think is impossible ✨.
 
 					<br>
 					<br>
