Update CDN for custom emojis
Signed-off-by: GitHub <noreply@github.com>

--- a/public/index.html
+++ b/public/index.html
@@ -29,43 +29,43 @@
 					because bees don't care what humans 🧑‍🤝‍🧑 think is impossible ✨. -->
 					According to all known laws
 					<img
-						src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/2696.svg"
+						src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@latest/assets/svg/2696.svg"
 						alt="⚖️"
 						class="emoji"
 					>
 					of aviation
 					<img
-						src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/2708.svg"
+						src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@latest/assets/svg/2708.svg"
 						alt="✈️"
 						class="emoji"
 					>
 					, there is no way a bee
 					<img
-						src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f41d.svg"
+						src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@latest/assets/svg/1f41d.svg"
 						alt="🐝"
 						class="emoji"
 					>
 					should be able to fly. Its wings
 					<img
-						src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f98b.svg"
+						src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@latest/assets/svg/1f98b.svg"
 						alt="🦋"
 						class="emoji"
 					>
 					are too small to get its fat little body off the ground
 					<img
-						src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f30e.svg"
+						src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@latest/assets/svg/1f30e.svg"
 						alt="🌍"
 						class="emoji"
 					>
 					. The bee, of course, flies anyway because bees don't care what humans
 					<img
-						src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f9d1-200d-1f91d-200d-1f9d1.svg"
+						src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@latest/assets/svg/1f9d1-200d-1f91d-200d-1f9d1.svg"
 						alt="🧑‍🤝‍🧑"
 						class="emoji"
 					>
 					think is impossible
 					<img
-						src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/2728.svg"
+						src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@latest/assets/svg/2728.svg"
 						alt="✨"
 						class="emoji"
 					>
