--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,14 @@
 			<div>
 				<div class="username">
 					Clyde
-					<span class="tag">
+					<span id="server-tag" class="tag">
 						<img src="images/badges/0.svg" alt="User server tag">
 						<span>TAG</span>
 					</span>
-					<!-- <span class="tag bot">
-						<img src="images/badges/verified.svg" alt="Verified app">
+					<span id="bot-tag" class="tag bot">
+						<!-- <img src="images/badges/verified.svg" alt="Verified app"> -->
 						<span>APP</span>
-					</span> -->
+					</span>
 					<!-- <span class="timestamp">00/00/0000 00:00 AM</span> -->
 				</div>
 				<span class="message">
